<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">App Reparto</string>

    <!--Login Activity-->
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="version">V 5.0.7</string>
    <string name="login">Iniciando Sesion</string>
    <string name="ingresar">Ingresar</string>

    <!--For All-->
    <string name="img">IMAGEN</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Aceptar</string>
    <string name="close">Salir</string>
    <string name="message">mensaje</string>
    <string name="title">Titulo</string>

    <!--Main Activity-->
    <string name="wait" tools:ignore="Typos">Espere un Momento</string>
    <string name="sync">Sincronizando</string>
    <string name="send">Enviando</string>
    <string name="failedConexion">Sin conexión a internet</string>
    <string name="conectado">Conectada</string>
    <string name="medidor">MEDIDOR :</string>
    <string name="contrato">CONTRATO :</string>
    <string name="direccion">Dirección :</string>
    <string name="siguiente">Siguiente</string>
    <string name="confirm">Confirmar Lectura</string>
    <string name="save">Guardar</string>
    <string name="camera">Camara</string>
    <string name="search">Buscar Medidor</string>
    <string name="searchOperario">Buscar Operario</string>
    <string name="takePhoto">Tomar Foto</string>
    <string name="openGallery">Abrir Galeria</string>
    <string name="externo">Externo</string>
    <string name="interno">Interno</string>
    <string name="sotano">Sotano</string>
    <string name="azotea">Azotea</string>
    <string name="ingrese_lectura">Ingrese Lectura</string>
    <string name="client">Cliente :</string>
    <string name="orden">Orden :</string>
    <string name="codigo_de_observacion">Codigo de Observación :</string>
    <string name="lectura">Lectura :</string>
    <string name="observacion">Observación :</string>
    <string name="resultado">Resultado :</string>

    <string name="buscar">Buscar Cliente</string>

    <string name="app_label"> Buscar Cliente</string>
    <string name="search_hint">Nombre o Apellido</string>
    <string name="search_view">Buscar Cliente</string>
    <string name="numero_constancia">Número de Constancia :</string>
    <string name="motivo">Motivo :</string>
    <string name="menu">Ir a Menu</string>
    <string name="clear">Limpiar</string>
    <string name="found">Suministro Encontrado</string>
    <string name="medidor2">Medidor :</string>
    <string name="contrato2">Contrato :</string>
    <string name="horario">Horario :</string>
    <string name="add">Agregar</string>
    <string name="enviar">Enviar</string>
    <string name="title_dialog_lectura">Eliga una Opción :</string>
    <string name="lecturas_normales">Lecturas Normales</string>
    <string name="lecturas_observadas">Lecturas Observadas</string>
    <string name="lecturas_manuales">Lecturas Manuales</string>
    <string name="subTitleLectura">(No serán efectivas)</string>
    <string name="inicioZonaPeligrosa">Inicio de zona peligrosa</string>
    <string name="terminoZonaPeligrosa">Fin de zona peligrosa</string>
    <string name="tapas_abiertas">Tapas Abiertas</string>
    <string name="reclamos">Reclamos</string>
    <string name="lecturas_recuperadas">Lectura Recuperadas</string>

    <string name="continuar">Continuar</string>
    <string name="TomarFoto">Click para tomar foto</string>
    <string name="codigoBarra">Codigo de barra o suministro </string>
    <string name="codigoManual">Ingrese número de Reparto o Codigo de barra</string>

    <string name="startWork">Inicio de Trabajo</string>
    <string name="endWork">Fin de Trabajo</string>
    <string name="repartoCode">Lista de Reparto</string>
    <string name="repartoManual">Reparto Manual</string>
    <string name="title_activity_maps">Map</string>
    <string name="salir">Salir</string>
    <string name="singin">Login</string>
    <string name="artefacto">Artefacto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="observation">Observación</string>
    <string name="tab1">General</string>
    <string name="tab2">Peligros</string>
    <string name="tab5">CheckList</string>
    <string name="tab3">Observaciones</string>
    <string name="tab4">Subir Archivos</string>
    <string name="check_one">Charla Pre Operacional, reconociendo previamente su zona de trabajo. Identificar los peligros y evaluar los riesgos, estableciendo las medidas de control vinculadas.</string>
    <string name="check_two">Revisar que los EPP, herramientas y otros medios de trabajos se encuentren en buen estado de conversación.</string>
    <string name="si">SI</string>
    <string name="title_menu">Menu Principal</string>
    <string name="no">NO</string>
    <string name="na">NA</string>
    <string name="descripcion">Descripción</string>
    <string name="fecha">Fecha</string>
    <string name="m">M</string>
    <string name="b">B</string>
    <string name="operario">Operario</string>
    <string name="titulo_de_trabajo">Título de Trabajo</string>
    <string name="lugar">Lugar</string>
    <string name="hora">Hora</string>
    <string name="fecha_title">Fecha</string>
    <string name="observacion2">Observación 2</string>
    <string name="edit">Editar</string>
    <string name="edit_medidas">Ingresar medida de control</string>
    <string name="delete">Eliminar</string>
    <string name="ver">Ver</string>
    <string name="deletePhoto">Eliminar Foto</string>


    <string name="codigo_emr">Codigo EMR:</string>
    <string name="enviar_ficha">Enviar Ficha</string>
    <string name="validar_emr">Validar EMR</string>
    <string name="de_mezcla_explosiva">% de mezcla explosiva</string>
    <string name="valor_del_mon_metro_de_presion_de_entrada">Valor del monémetro de Presion de Entrada</string>
    <string name="seleccione_marca_de_corrector">Seleccione marca de corrector</string>
    <string name="valor_de_volumen_sin_corregir_de_la_unidad_correctora">Valor de volumen sin corregir de la unidad correctora</string>
    <string name="valor_de_volumen_sin_corregir_del_medidor">Valor de volumen sin corregir del medidor</string>
    <string name="valor_de_volumen_registrado_de_la_unidad_correctora">Valor de volumen registrado de la unidad correctora</string>
    <string name="valor_de_la_presi_n_de_medicion_de_uc">Valor de la presión de medicion de UC</string>
    <string name="valor_de_la_temperatura_de_medici_n_de_la_uc">Valor de la temperatura de medición de la UC</string>
    <string name="tiempo_de_vida_de_la_bateria">Tiempo de vida de la bateria</string>
    <string name="foto_panoramica">Foto Panoramica</string>
    <string name="tiene_gabinete_de_temometria">Tiene Gabinete de temometria ?</string>
    <string name="presenta_cliente">Presenta Cliente ?</string>
    <string name="nombre_contacto">Nombre Contacto</string>
    <string name="registrar_ficha">Registrar Ficha</string>
    <string name="verificar_ficha">Verificar Ficha</string>
    <string name="tipo_traslado">Tipo de Traslado</string>
    <string name="try_again">Por favor volver a intentarlo</string>
    <string name="placa_unidad">Placa de la Unidad</string>
    <string name="marca_unidad">Marca de la unidad</string>
    <string name="ingrese_kilometraje">Ingrese Kilometraje</string>
    <string name="actividad_realizar">Actividad a realizar</string>
    <string name="active">Activar Servicio</string>
    <string name="close_inspection">Cerrar Inspección</string>


    <string name="ubicacion_del_medidor">Ubicación del Medidor</string>
    <string name="telefono">telefono</string>
    <string name="my_direction">Mz D Lote 2 Venecia San Felipe</string>
    <string name="causa">Causa</string>
    <string name="manzana">Manzana</string>
    <string name="comentario">Comentario</string>
    <string name="observaciones">Observaciones</string>
    <string name="ta">TA</string>
    <string name="go">Ir</string>
    <string name="buscar_suministro">Buscar Suministro</string>
    <string name="title1">Recepción de Recibo ENEL</string>
    <string name="title2">Recepción de varios Recibos</string>
</resources>
